# docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "0.0.1"
     },
     "paths": {
-        "/v1/department/range": {
+        "/v1/departments": {
             "post": {
                 "description": "Get department by range",
                 "consumes": [
@@ -56,7 +56,7 @@
                 }
             }
         },
-        "/v1/department/rating": {
+        "/v1/departments/rating": {
             "post": {
                 "description": "Add department rating",
                 "consumes": [
@@ -102,7 +102,7 @@
                 }
             }
         },
-        "/v1/department/{id}": {
+        "/v1/departments/{id}": {
             "get": {
                 "description": "Get department by id",
                 "consumes": [
@@ -596,11 +596,16 @@
             "type": "object",
             "required": [
                 "coordinates",
+                "test",
                 "text"
             ],
             "properties": {
                 "coordinates": {
                     "$ref": "#/definitions/model.Coordinates"
+                },
+                "test": {
+                    "type": "boolean",
+                    "example": true
                 },
                 "text": {
                     "type": "string",
