# internal/api/controller/department_controller.go
@@ -34,7 +34,7 @@ func NewDepartmentController(dr model.DepartmentRepository, rr model.RatingRepos
 //	@Param			id	path		string	true	"Department ID"
 //	@Success		200	{object}	model.Department
 //	@Failure		404	{object}	model.ErrorResponse	"Department not found"
-//	@Router			/v1/department/{id} [get]
+//	@Router			/v1/departments/{id} [get]
 func (dc *departmentController) GetDepartmentById(c *gin.Context) {
 	id := c.Param("id")
 
@@ -67,7 +67,7 @@ func (dc *departmentController) GetDepartmentById(c *gin.Context) {
 //	@Success		200				{object}	[]model.Department
 //	@Failure		400				{object}	model.ErrorResponse	"Bad request"
 //	@Failure		422				{object}	model.ErrorResponse	"Unprocessable entity"
-//	@Router			/v1/department/range [post]
+//	@Router			/v1/departments [post]
 func (dc *departmentController) GetDepartmentByRange(c *gin.Context) {
 	departmentData := model.DepartmentRangeRequest{}
 	if err := c.BindJSON(&departmentData); err != nil {
@@ -111,14 +111,14 @@ func (dc *departmentController) GetDepartmentByRange(c *gin.Context) {
 //	@Success		200			{object}	string					"Rating added"
 //	@Failure		400			{object}	model.ErrorResponse		"Bad request"
 //	@Failure		422			{object}	model.ErrorResponse		"Unprocessable entity"
-//	@Router			/v1/department/rating [post]
+//	@Router			/v1/departments/rating [post]
 func (dc *departmentController) AddDepartmentRating(c *gin.Context) {
 	ratingData := model.DepartmentRating{}
 	if err := c.BindJSON(&ratingData); err != nil {
 		c.JSON(http.StatusUnprocessableEntity, model.ErrorResponse{Message: err.Error()})
 		return
 	}
-	
+
 	userId, err := c.Cookie("session")
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, model.ErrorResponse{Message: err.Error()})
